# grok1-to-grok2-250825

./: LICENSE.txt  README.md  config_grok2_like.json  grok2_config_notes.md  pyproject.toml  requirements.txt  upgrade_notes.md
grok/: __init__.py  attention.py  checkpoint.py  model.py  moe.py  rope.py  run.py  runners.py
scripts/: export_tp8_ckpt.py  quantize_fp8.py
tokenizer/: tokenizer.tok.json
